# RoadTraffic

./: Instruction.txt  KR.sln  Инструкция.docx
Classes/Headers/: Car.h  Crash.h  Function.h  FunctionForMain.h  Include.h  Map.h  RoadSign.h  TrafficLight.h  UnitTest.h  View.h  resource.h
Classes/Sources/: Car.cpp  Crash.cpp  Function.cpp  FunctionForMain.cpp  Main.cpp  Map.cpp  RoadSign.cpp  TrafficLight.cpp  UnitTest.cpp  View.cpp
Debug/: KR.ilk
Documentation/: CMakeLists.txt  Documentation.docx  Report.docx  Презентация курсового проекта.pptx
KR/: Car.cpp  Car.h  Crash.cpp  Crash.h  FunctionForMain.h  Include.h  KR.APS  KR.rc  KR.vcxproj  KR.vcxproj.filters  Main.cpp  Map.cpp  Map.h  RoadSign.cpp  RoadSign.h  TrafficLight.cpp  TrafficLight.h  View.h
KR/Debug/: KR.res  vc120.idb
KR/Debug/KR.tlog/: CL.read.1.tlog  CL.write.1.tlog  KR.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
KR/Release/KR.tlog/: CL.write.1.tlog  KR.lastbuildstate  cl.command.1.tlog  cl.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
